<resources>
    <string name="app_name">Lesson Line</string>
    <string name="default_web_client_id">377872457546-nph9rk4p822ug327tgr19kfmhk8gif7i.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="log_in_with_google">Log In With Google</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="like">Like</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="insert_photo">Insert Photo</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="write_your_question_or_idea">Write your question or idea</string>
    <string name="share">Share</string>
    <string name="user_photo">User Photo</string>
    <string name="post_photo">Post Photo</string>
    <string name="save">Save</string>
    <string name="not_now">Not Now</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="comment">Comment</string>
    <string name="send_answer">Send Answer</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="full_image">Full Image</string>
    <string name="full_image_close">Full Image Close</string>
    <string name="posts">Posts</string>
    <string name="follow">Follow</string>
    <string name="write_your_answer">Write Your Answer</string>
    <string name="answers">Answers</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="detail">Detail</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="answer_notifications">Answer Notifications</string>
    <string name="take_photo">Take Photo</string>
    <string name="error_icon_image">Error Icon Image</string>
    <string name="premium_icon">Premium Icon</string>
    <string name="discuss">Discuss</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="icon_nfo">Icon İnfo</string>
    <string name="reset_password">Reset Password</string>
    <string name="image_filter_button">Image Filter Button</string>
    <string name="filter_item_image">Filter Item Image</string>
    <string name="close_filters">Close Filters</string>
    <string name="post_answers_nofifications">Post Answers Nofifications</string>
</resources>