<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home_bottom_nav_icon_state"
        android:title="@string/home"
        />

    <item
        android:id="@+id/searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        />

    <item
        android:id="@+id/addPostFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_add"
        android:title="@string/add_post"/>

    <item
        android:id="@+id/answernotificationsfragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_answer"
        android:title="@string/answer_notifications" />

    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        />
</menu>