<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/text_title"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal_top_gl" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding_small"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/text_medium"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding_small"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/text_medium"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>

    <TextView
        android:id="@+id/tv_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:paddingVertical="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_forgotten_password"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>

    <LinearLayout
        android:id="@+id/ll_or_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"
        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@color/colorCustomColor"
            android:alpha="0.2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/colorCustomColor"
            android:layout_marginHorizontal="@dimen/margin_small"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:alpha="0.2"
            android:background="@color/colorCustomColor"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>