<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/text_title"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal_top_gl" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:endIconDrawable="@drawable/ic_close_eye"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_repassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:endIconDrawable="@drawable/ic_close_eye"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:visibility="visible"
        android:paddingVertical="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintTop_toBottomOf="@id/til_repassword"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/til_repassword"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>


</androidx.constraintlayout.widget.ConstraintLayout>