<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.auth.forgetpassword.ForgetPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/text_title"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/core_custom_email_icon"
            android:drawablePadding="@dimen/padding_small"
            android:background="@drawable/core_custom_input"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintLeft_toLeftOf="@id/vertical_left_gl"
        app:layout_constraintRight_toRightOf="@id/vertical_right_gl"/>

</androidx.constraintlayout.widget.ConstraintLayout>