<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.main.profile.settings.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"/>


    <ImageButton
        android:id="@+id/ibtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        android:background="@color/transparent"
        app:tint="@color/md_theme_primary"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintTop_toTopOf="@id/horizontal_top_gl"
        app:layout_constraintBottom_toTopOf="@id/sv_settings"
        />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/ibtn_back"
        app:layout_constraintTop_toTopOf="@id/horizontal_top_gl"
        app:layout_constraintBottom_toBottomOf="@id/ibtn_back"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"/>

    <ScrollView
        android:id="@+id/sv_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ibtn_back"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/ll_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_saved_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_saved_posts"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_posts"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    android:padding="@dimen/padding_small"
                    />

                <ImageButton
                    android:id="@+id/ibtn_saved_posts"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/saved_posts"
                    android:src="@drawable/ic_arrow_right"
                    android:background="@color/transparent"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:padding="@dimen/padding_small"
                android:textColor="@color/md_theme_error"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>