<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.features.main.profile.otherprofile.OtherProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageButton
        android:id="@+id/ibtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@color/transparent"
        app:tint="@color/md_theme_primary"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        tools:text="username"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@id/ibtn_back"
        app:layout_constraintTop_toTopOf="@id/ibtn_back"
        app:layout_constraintBottom_toBottomOf="@id/ibtn_back"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profile"
        tools:srcCompat="@tools:sample/avatars"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:strokeWidth="2dp"
        app:strokeColor="@color/md_theme_primary"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintTop_toBottomOf="@id/horizontal_top_gl"/>




    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="24"
        android:textSize="@dimen/text_xlarge"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/tv_following"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers"
        app:layout_constraintEnd_toEndOf="@id/tv_followers"/>

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="24"
        android:textSize="@dimen/text_xlarge"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        app:layout_constraintTop_toBottomOf="@id/tv_following"
        app:layout_constraintStart_toStartOf="@id/tv_following"
        app:layout_constraintEnd_toEndOf="@id/tv_following"/>


    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="bio"
        android:textSize="@dimen/text_medium"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/md_theme_primary"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_bio"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"/>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintEnd_toStartOf="@id/vertical_right_gl"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_posts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/btn_follow"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_bottom_gl"
        />

    <FrameLayout
        android:id="@+id/fl_full_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/horizontal_top_gl"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_bottom_gl"
        app:layout_constraintStart_toStartOf="@id/vertical_left_gl"
        app:layout_constraintEnd_toEndOf="@id/vertical_right_gl"
        >

        <ImageView
            android:id="@+id/iv_full_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:visibility="gone"
            tools:srcCompat="@tools:sample/avatars"
            android:background="#CC000000"
            android:contentDescription="@string/full_image"/>

        <ImageButton
            android:id="@+id/ibtn_close_full_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:visibility="gone"
            android:contentDescription="@string/full_image_close"
            android:src="@drawable/ic_close"
            android:background="@color/transparent"
            android:padding="@dimen/padding_small"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>